<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Googolplex</string>
    <string name="action_settings">Settings</string>
    <string name="action_jump">Jump</string>
    <string name="custom_jump_hint">Custom target zero position</string>
    <string name="title_preferences">Preferences</string>
    <string name="title_tilt_lock_checkbox_preference">Tilt lock</string>
    <string name="summary_tilt_lock_checkbox_preference">Prevents orientation change</string>
    <string name="title_license_kolavar">kolavar - support-v4-preferencefragment</string>
    <string name="summary_license_kolavar">Apache License, Version 2.0</string>
	<string name="title_licenses">Licenses</string>
	<string name="title_theme_select">Select theme</string>
	<string name="summary_theme_select">Choose light or dark theme</string>
    
</resources>
