<PreferenceScreen 
    xmlns:android="http://schemas.android.com/apk/res/android">
    
    <PreferenceCategory 
    	android:title="@string/title_preferences" >
    	
    	<CheckBoxPreference
    	    	android:key="tilt_lock"
    	    	android:title="@string/title_tilt_lock_checkbox_preference"
    	    	android:summary="@string/summary_tilt_lock_checkbox_preference"
    	    	android:persistent="true" 
    	    	android:enabled="true"/>
    	
		<ListPreference
		    android:key="theme_select"
		    android:entries="@array/themeSelect"
		    android:entryValues="@array/themeSelectValues"
		    android:summary="@string/summary_theme_select"
		    android:title="@string/title_theme_select" 
		    android:defaultValue="Light"/>
		    
    	    	
	</PreferenceCategory>
	
    <PreferenceCategory
	    android:title="@string/title_licenses" >
        
    	<Preference 
    	    android:key="license_kolavar"
    	    android:title="@string/title_license_kolavar" 
    	    android:summary="@string/summary_license_kolavar"/>
        
    </PreferenceCategory>
	
	
</PreferenceScreen>